Updates for V15 MDC controls. Fixed up all contrast colors for controls used in demo. More components may need to be tested.

--- a/src/app/_app.theme.scss
+++ b/src/app/_app.theme.scss
@@ -1,12 +1,15 @@
+@use "sass:map";
+@use "@angular/material" as mat;
 @mixin app-theme($theme) {
   // Extract the palettes you need from the theme definition.
-  $primary: map-get($theme, primary);
-  $accent: map-get($theme, accent);
+  $color: mat.get-color-config($theme);
+  $primary: map.get($color, primary);
+  $accent: map.get($color, accent);
 
   // Define any styles affected by the theme.
   .app-header {
     // Use mat-color to extract individual colors from a palette.
     // background-color: mat-color($primary);
-    border: medium solid mat-color($accent, A400);
+    border: medium solid mat.get-color-from-palette($accent, A400);
   }
 }
